mobile layout bug fixed

--- a/product-card/style.css
+++ b/product-card/style.css
@@ -297,3 +297,10 @@ input:checked {
     font-size: 1.45rem;
   }
 }
+
+@media screen and (max-height: 630px) {
+  main {
+    height: auto;
+    padding: 20px 0;
+  }
+}
